Part_02/parser.c
// Parser for the alic compiler.
// (c) 2025 Warren Toomey, GPL3

// Note: You can grep '//-' this file to extract the grammar

#include <stdio.h>
#include <stdlib.h>
#include <ctype.h>
#include "alic.h"
#include "proto.h"

// Forward declarations
static void type_declaration(void);
static void function_declaration(ASTnode * decl, int visibility);
static ASTnode *function_prototype(ASTnode * func);
static ASTnode *typed_declaration_list(void);
static void funcptr_declaration(char *name);
static void enum_declaration(void);
static void struct_declaration(char *name);
static ASTnode *union_declaration(void);
static int get_visibility(void);
static void global_var_declaration(ASTnode * decl, int visibility);
static ASTnode *decl_initialisation(void);
static ASTnode *array_typed_declaration(void);
static ASTnode *typed_declaration(void);
static int *array_size(int *num);
static Type *assoc_keytype(void);
static Type *match_type(bool checkonly);
static ASTnode *statement_block(Sym * func);
static ASTnode *declaration_stmts(void);
static ASTnode *procedural_stmts(void);
static ASTnode *procedural_stmt(void);
static ASTnode *assign_stmt(void);
static ASTnode *short_assign_stmt(void);
static ASTnode *if_stmt(void);
static ASTnode *while_stmt(void);
static ASTnode *for_stmt(void);
static ASTnode *foreach_stmt(void);
static ASTnode *return_stmt(void);
static ASTnode *abort_stmt(void);
static ASTnode *break_stmt(void);
static ASTnode *continue_stmt(void);
static ASTnode *try_stmt(void);
static ASTnode *switch_stmt(void);
static ASTnode *fallthru_stmt(void);
static ASTnode *function_call(void);
static ASTnode *va_start_end_stmt(void);
static ASTnode *undef_stmt(void);
static ASTnode *bracketed_expression_list(void);
static ASTnode *bracketed_expression_element(void);
static ASTnode *expression_list(void);
static ASTnode *named_expression_list(void);
static ASTnode *expression(void);
static ASTnode *ternary_expression(void);
static ASTnode *bitwise_expression(void);
static ASTnode *boolean_expression(void);
static ASTnode *logical_and_expression(void);
static ASTnode *logical_or_expression(void);
static ASTnode *relational_expression(void);
static ASTnode *shift_expression(void);
static ASTnode *additive_expression(void);
static ASTnode *multiplicative_expression(void);
static ASTnode *unary_expression(void);
static ASTnode *primary_expression(void);
static ASTnode *sizeof_expression(void);
static ASTnode *va_arg_expression(void);
static ASTnode *cast_expression(void);
static ASTnode *exists_expression(void);
static ASTnode *postfix_variable(ASTnode * this);

// Global variables
Sym *Thisfunction;		// The function we are parsing

// Parse the input file
//
//- input_file= ( type_declaration
//-             | enum_declaration
//-             | global_var_declaration
//-             | function_declaration
//-             )* EOF
//-
void input_file(void) {
  ASTnode *decl;
  int visibility;

  // Loop parsing global declarations until we hit the EOF
  while (Thistoken.token != T_EOF) {
    switch (Thistoken.token) {
    case T_TYPE:
      type_declaration();
      break;
    case T_ENUM:
      enum_declaration();
      break;
    case T_PUBLIC:
    case T_EXTERN:
    default:
      // This could be a function or variable declaration.
      // Get any optional visibility
      visibility = get_visibility();

      // Get the typed declaration
      decl = array_typed_declaration();

      // Look at the next token to determine
      // what sort of declaration this is
      switch(Thistoken.token) {
	case T_LPAREN:					// A function
	  // Functions cannot be declared const
	  if (decl->is_const== true)
	    fatal("Can't declare a function to be const\n");
	  if (decl->is_inout== true)
	    fatal("Only function parameters can be declared inout\n");

	  // Functions cannot return arrays
	  if (decl->is_array == true)
	    fatal("Can't declare %s() to return an array\n", decl->strlit);
	  function_declaration(decl, visibility);
	  break;

	default:			// A global variable or a syntax error
	  global_var_declaration(decl, visibility);
      }
    }
  }
}

// Parse a new type declaration
//
//- type_declaration= TYPE IDENT SEMI
//-                 | TYPE IDENT ASSIGN type integer_range? SEMI
//-                 | TYPE IDENT ASSIGN struct_declaration  SEMI
//-                 | TYPE IDENT ASSIGN funcptr_declaration SEMI
//-
//- integer_range= RANGE integer_constant ... integer_constant
//-
//- integer_constant= NUMLIT | ENUMVAL
//-

// Parse and return either an integer NUMLIT or an enum value
static Intsize integer_constant(void) {
  Sym *sym;
  Intsize val;

  switch(Thistoken.token) {
    case T_NUMLIT:
      if (Thistoken.litval.numtype == NUM_FLT)
	fatal("Cannot use a float literal here\n");
      val= Thistoken.litval.intval;
      break;
    case T_IDENT:
      sym= find_symbol(Thistoken.tokstr);
      if (sym == NULL || sym->symtype != ST_ENUM)
	fatal("Unrecognised enum name %s\n", Thistoken.tokstr);
      val= sym->count;
      break;
    default:
      fatal("Need either an integer literal value or an enum name\n");
  }

  scan(&Thistoken);
  return(val);
}

static void type_declaration(void) {
  char *typename;
  Type *ty;
  Type *basetype;
  Intsize lower=0;
  Intsize upper=0;

  // Skip the TYPE keyword
  scan(&Thistoken);

  if (Thistoken.token != T_IDENT)
    fatal("Expecting a name after \"type\"\n");

  // Get the type's name
  typename = Thistoken.tokstr;

  // Skip the identifier
  scan(&Thistoken);

  // If the next token is an '='
  if (Thistoken.token == T_ASSIGN) {
    // Skip the '='
    scan(&Thistoken);

    // We have a function pointer type
    if (Thistoken.token == T_FUNCPTR) {
      funcptr_declaration(typename);
    } else if (Thistoken.token == T_STRUCT) {
      // If the next token is STRUCT
      // Parse the struct list
      struct_declaration(typename);
    } else {
      // This is an alias to an existing type.
      // Get the base type
      basetype = match_type(false);
      if (basetype == NULL)
	fatal("Unknown type in type declaration for %s\n",
	      typename);

      // Do we have a RANGE token? If so, parse
      // and get the lower and upper range
      if (Thistoken.token == T_RANGE) {
	scan(&Thistoken);
	lower= integer_constant();
	match(T_ELLIPSIS, true);
	upper= integer_constant();

	// Ensure we are only applying
	// a range to an integer type
	if (!is_integer(basetype))
	  fatal("Can only apply a range to an integer type\n");

	// Ensure the range is compatible with the type
	if (lower < typemin[basetype->kind])
	  fatal("%ld is outside the range of %s\n",
		lower, get_typename(basetype));
	if (upper > typemax[basetype->kind])
	  fatal("%ld is outside the range of %s\n",
		upper, get_typename(basetype));
      }

      // Add the alias type to the list
      ty= new_type(TY_USER, basetype->size, basetype->is_unsigned, 0,
			typename, basetype);

      // Update the type with any given range.
      if ((lower != 0) || (upper != 0)) {
	ty->lower= lower;
	ty->upper= upper;
	// Also change this to not be of TY_USER type.
	// Use the base type's kind
	ty->kind= basetype->kind;
      }
    }
  } else {
    // No '=' sign
    // Add the opaque type to the list
    new_type(TY_USER, 0, false, 0, typename, NULL);
  }

  // Get the trailing semicolon
  semi();
}

//- funcptr_declaration= FUNCPTR type
//-                      LPAREN type_list (COMMA ELLIPSIS)? RPAREN
//-                      (THROWS type)?
//-
//- type_list= CONST? INOUT? type (COMMA CONST? INOUT? type)*
//-
static Paramtype *type_list(void) {
  Paramtype *head=NULL;
  Paramtype *this;
  Paramtype *last;
  Type *ty;
  bool is_const;
  bool is_inout;

  // Loop getting all the parameter types
  while (1) {
    is_const= false; is_inout= false;

    // Stop if we see an ELLIPSIS
    if (Thistoken.token == T_ELLIPSIS) break;

    // See if the declaration is marked const
    if (Thistoken.token == T_CONST) {
      scan(&Thistoken);
      is_const= true;
    }

    // See if the declaration is marked inout
    if (Thistoken.token == T_INOUT) {
      scan(&Thistoken);
      is_inout= true;
    }

    // Get the type
    ty = match_type(false);

    // Build the Paramtype node
    this= (Paramtype *)Malloc(sizeof(Paramtype));
    this->type= ty;
    this->is_const= is_const;
    this->is_inout= is_inout;

    // Add it to the linked list
    if (head==NULL) {
      head= this; last= this;
    } else {
      last->next= this; last= this;
    }

    // Stop when the next token isn't a comma
    if (Thistoken.token != T_COMMA) break;
    scan(&Thistoken);
  }
  
  return(head);
}

static void funcptr_declaration(char *typename) {
  Type *ty;
  Type *rettype;
  Type *excepttype=NULL;
  Type *basetype=NULL;
  Paramtype *paramtype;
  bool is_variadic= false;

  // Skip the FUNCPTR keyword.
  // Get the return type and the '('
  scan(&Thistoken);
  rettype = match_type(false);
  lparen();

  // Get the parameter types
  paramtype= type_list();

  // If the next token is an ELLIPSIS,
  // the function pointer is variadic
  if (Thistoken.token == T_ELLIPSIS) {
    is_variadic= true;
    scan(&Thistoken);
  }

  // Get the ')'
  rparen();

  // If we have a "throws", skip it
  // and get the exception type
  if (Thistoken.token == T_THROWS) {
    scan(&Thistoken);
    excepttype = match_type(false);

    // The type must be a pointer to a struct which
    // has an int32 as the first member
    if ((excepttype->kind != TY_STRUCT) || (excepttype->ptr_depth != 1))
      fatal("Type %s not suitable to hold an exception\n",
            get_typename(excepttype));
    basetype= value_at(excepttype);
    if ((basetype->memb == NULL) || (basetype->memb->type != ty_int32))
      fatal("Type %s not suitable to hold an exception\n",
            get_typename(excepttype));
  }

  // Add the type to the table of types
  ty= new_type(TY_FUNCPTR, ty_voidptr->size, false, 0, typename, NULL);
  ty->rettype= rettype;
  ty->paramtype= paramtype;
  ty->excepttype= excepttype;
  ty->is_variadic= is_variadic;

  return;
}

// Parse an enumerated list. We must have at least
// one item in the enum list
//
//- enum_declaration= ENUM LBRACE enum_list RBRACE SEMI
//-
//- enum_list= enum_item (COMMA enum_item)*
//-
//- enum_item= IDENT
//-          | IDENT ASSIGN NUMLIT
//-
static void enum_declaration(void) {
  Litval val;
  Type *ty;
  Sym *sym;
  char *name;

  // Skip the ENUM keyword and get the left brace
  scan(&Thistoken);
  lbrace();

  // Loop getting the next enum item
  val.intval = 0;
  val.numtype = NUM_INT;
  while (1) {
    // Make sure that we have an identifier
    match(T_IDENT, true);
    name = Thistoken.tokstr;

    // If it's followed by an '='
    if (Thistoken.token == T_ASSIGN) {
      // Skip it and get the following numeric literal token
      scan(&Thistoken);
      match(T_NUMLIT, false);

      // Check that the literal value isn't a float
      if (Thistoken.litval.numtype == NUM_FLT)
	fatal("Cannot use a float literal as an enumerated value\n");

      // Update val to hold this literal value
      val.intval = Thistoken.litval.intval;

      // Skip the literal value
      scan(&Thistoken);
    }

    // Get a suitable type for the literal value
    ty = parse_litval(&val);

    // Add the enum's name and value to the global scope.
    // Then set the symbol's literal value
    if (find_symbol(name) != NULL)
      fatal("Symbol %s already exists\n", name);
    sym = add_symbol(name, ST_ENUM, ty, SV_PRIVATE);
    sym->count = val.intval;

    // Increment the enum value
    val.intval++;

    // If we have a right brace, stop looping.
    // Otherwise check for and absorb a comma
    if (Thistoken.token == T_RBRACE)
      break;
    match(T_COMMA, true);
  }

  // Skip past the right brace and semicolon
  rbrace();
  semi();
}

// Given a pointer to a newly-created struct type,
// a single typed declaration or (if isunion is true)
// a list of union members, and the possible offset
// where the (first) member could start, add
// the declaration(s) as members to the type.
// Die if there are any semantic errors.
// Return the possible offset of the next member
static int add_memb_to_struct(Type * strtype, ASTnode * asthead,
			      int offset, bool isunion) {
  ASTnode *astmemb;
  Sym *thismemb, *lastmemb;
  int biggest_memb = 0;
  ASTnode *astbiggest;
  int size;
  int i;
  Type *type;

  if (O_logmisc)
    fprintf(Debugfh, "add_memb: offset is %d\n", offset);

  // If this is a union, find the biggest member
  // as this will be the one that we align on.
  if (isunion) {
    for (astmemb = asthead; astmemb != NULL; astmemb = astmemb->mid) {
      if (astmemb->type->size > biggest_memb) {
	biggest_memb = astmemb->type->size;
	astbiggest = astmemb;
      }
    }

    // Calculate the offset of the biggest union member
    offset = genalign(astbiggest->type, offset);
    if (O_logmisc)
      fprintf(Debugfh, "set biggest in union to %d offset %d\n",
	      biggest_memb, offset);
  }

  // Walk the list of new members to add to the struct
  for (astmemb = asthead; astmemb != NULL; astmemb = astmemb->mid) {
    // Do not let opaque types in a struct
    if (astmemb->type->size == 0)
      fatal("Member of type %s cannot be in a struct\n",
	    get_typename(astmemb->type));

    // Walk the existing members to a) check that we don't have
    // duplicate member names, and b) get a pointer to the last
    // member currently in the struct
    for (lastmemb = thismemb = strtype->memb; thismemb != NULL;
	 lastmemb = thismemb, thismemb = thismemb->next) {
      if (!strcmp(thismemb->name, astmemb->strlit))
	fatal("Duplicate member name %s in struct declaration\n",
	      thismemb->name);
    }

    // It's safe to add the astmemb to the struct.
    // Determine the size of the member. Deal with
    // array members: multiply by the number of elements.
    size = astmemb->type->size;
    if (astmemb->is_array == true) {
      // Get the type that the array points at
      type = value_at(astmemb->type);
      size = type->size;

      for (i=0; i < astmemb->dimensions; i++) {
        if (O_logmisc) fprintf(Debugfh,
			"multiplying size %d by dimsize[%d] == %d\n",
				size, i, astmemb->dimsize[i]);
	size = size * astmemb->dimsize[i];
      }
    }

    // Create the Sym struct, add the name and type
    thismemb = (Sym *) Calloc(sizeof(Sym));
    thismemb->name = astmemb->strlit;
    thismemb->type = astmemb->type;
    thismemb->is_const = astmemb->is_const;
    if (astmemb->is_inout== true)
      fatal("Only function parameters can be declared inout\n");

    // Mark it as an array if needed
    if (astmemb->is_array == true) {
      thismemb->dimensions = astmemb->dimensions;
      thismemb->dimsize = astmemb->dimsize;
      thismemb->symtype = ST_VARIABLE;
    }

    // Is this the first member?
    if (strtype->memb == NULL) {
      thismemb->offset = 0;
      strtype->memb = thismemb;
      if (O_logmisc)
	fprintf(Debugfh, "%s member %s: offset %d size %d\n",
		get_typename(thismemb->type),
		thismemb->name, thismemb->offset, size);

      // Update the offset if not a union
      if (isunion == false)
        offset = offset + size;
    } else {

      // Not the first member. Get the aligned offset for it
      // Then append it. If a union, we already have the right offset
      if (isunion == false)
        offset = genalign(astmemb->type, offset);
      thismemb->offset = offset;
      lastmemb->next = thismemb;

      // Update the offset if not a union
      if (isunion == false)
        offset = offset + size;

      if (O_logmisc)
        fprintf(Debugfh, "%s member %s: offset %d size %d\n",
	      get_typename(thismemb->type),
	      thismemb->name, thismemb->offset, size);
    }
  }

  // Now return the possible offset of the next member
  if (isunion) {
    if (O_logmisc)
      fprintf(Debugfh, "addmemb isunion returning offset %d\n\n",
				offset + biggest_memb);
    return (offset + biggest_memb);
  } else {
    if (O_logmisc)
      fprintf(Debugfh, "addmemb not union returning offset %d\n\n", offset);
    return (offset);
  }
}

// Parse a struct declaration.
//
//- struct_declaration= STRUCT LBRACE struct_list RBRACE
//-
//- struct_list= struct_item (COMMA struct_item)*
//-
//- struct_item= array_typed_declaration
//-            | union_declaration
//-
static void struct_declaration(char *typename) {
  Type *thistype;
  ASTnode *astmemb;
  int offset = 0;

  // Skip the STRUCT keyword and get the left brace
  scan(&Thistoken);
  lbrace();

  // Build a new STRUCT type
  thistype = new_type(TY_STRUCT, 0, false, 0, typename, NULL);
  if (O_logmisc)
    fprintf(Debugfh, "type struct %s:\n", typename);

  // Loop getting members for the struct
  while (1) {
    // Is the next token a UNION?
    if (Thistoken.token == T_UNION) {
      // Get the union declaration
      // and add the members to the struct
      astmemb = union_declaration();
      offset = add_memb_to_struct(thistype, astmemb, offset, true);
    } else {
      // Get a single array typed declaration
      // and add the member to the struct
      astmemb = array_typed_declaration();
      offset = add_memb_to_struct(thistype, astmemb, offset, false);
    }

    // If no comma, stop now
    if (Thistoken.token != T_COMMA)
      break;

    // Skip the comma
    scan(&Thistoken);
  }

  // Set the struct size in bytes
  thistype->size = offset;
  if (O_logmisc)
    fprintf(Debugfh, "struct total size is %d\n", offset);

  // Get the trailing right brace
  rbrace();
}

// Parse a union declaration

//- union_declaration= UNION LBRACE typed_declaration_list RBRACE
//-
static ASTnode *union_declaration(void) {
  ASTnode *astmemb;

  // Skip the UNION keyword and get the left brace
  scan(&Thistoken);
  lbrace();

  astmemb = typed_declaration_list();

  // Get the trailing right brace
  rbrace();
  return (astmemb);
}

// Global variables and functions have a default private
// visibility which can be changed by these keywords.
//
//- visibility= ( PUBLIC | EXTERN )?
//-
static int get_visibility(void) {
  int visibility = SV_PRIVATE;
  switch (Thistoken.token) {
  case T_PUBLIC:
    visibility = SV_PUBLIC;
    scan(&Thistoken);
    break;
  case T_EXTERN:
    visibility = SV_EXTERN;
    scan(&Thistoken);
    break;
  }
  return (visibility);
}

// Parse a global variable declaration.
// We receive the typed_declaration in decl
//
//- global_var_declaration= visibility array_typed_declaration
//-                         decl_initialisation? SEMI
//-
void global_var_declaration(ASTnode * decl, int visibility) {
  ASTnode *init = NULL;
  Sym *sym;

  // See if the variable's name already exists
  if (find_symbol(decl->strlit) != NULL)
    fatal("Symbol %s already exists\n", decl->strlit);

  // Add the symbol and type as a global
  sym = add_symbol(decl->strlit, ST_VARIABLE, decl->type, visibility);

  // Add any const attribute
  sym->is_const= decl->is_const;
  if (decl->is_inout== true)
    fatal("Only function parameters can be declared inout\n");

  // If the declaration was marked as an array,
  // update the symbol
  if (decl->is_array == true) {
    sym->dimensions = decl->dimensions;
    sym->dimsize = decl->dimsize;
  }

  // Copy the key type from the declaration to the symbol
  sym->keytype= decl->keytype;

  // If we have an '=', we have an initialisation
  if (Thistoken.token == T_ASSIGN) {
    init = decl_initialisation();
    if (O_logmisc) {
      fprintf(Debugfh, "%s initialisation:\n", decl->strlit);
      dumpAST(init, 0);
    }

    // Yes, an initialisation list
    if (sym->visibility == SV_EXTERN)
      fatal("Cannot intiialise an external variable\n");

    // Start the output of the variable.
    // Don't zero it
    genglobsym(sym, false);

    // Check the initialisation (list) against the symbol.
    // Also output the values in the list
    init= check_bel(sym, init, 0, false, NOTEMP);
    if (init != NULL)
      fatal("Too many values in the expression list\n");

    // End the output of the variable
    genglobsymend(sym);
  } else {

    // No initialisation list.
    // Output zeroes instead
    if (sym->visibility != SV_EXTERN) {
      genglobsym(sym, true);
      genglobsymend(sym);
    }
  }

  // Get the trailing semicolon
  semi();
}

// Parse a declaration initialisation
//
//- decl_initialisation= ASSIGN expression
//-                    | ASSIGN bracketed_expression_list
//-
static ASTnode *decl_initialisation(void) {

  // Skip the '='
  scan(&Thistoken);

  // Get either an expression or a bracketed_expression_list
  if (Thistoken.token == T_LBRACE)
    return(bracketed_expression_list());
  else
    return (expression());
}

// Parse a single function declaration
//
//- function_declaration= visibility function_prototype statement_block
//-                     | visibility function_prototype SEMI
//-
//
// We also keep a state variable to see if
// there was a vavle returned from the function
static bool value_returned;
//
static void function_declaration(ASTnode * func, int visibility) {
  ASTnode *s;

  // Get the function's prototype.
  func = function_prototype(func);

  // If the next token is a semicolon
  if (Thistoken.token == T_SEMI) {
    // Add the function prototype to the symbol table
    add_function(func, func->left, visibility);

    // Skip the semicolon and return
    scan(&Thistoken);
    return;
  }

  // It's not a prototype, so we expect a statement block now.
  // Set Thisfunction to the function's symbol structure.
  // We haven't returned a value yet.
  if (visibility == SV_EXTERN)
    fatal("Cannot declare an extern function with a body\n");
  declare_function(func, visibility);
  Thisfunction = find_symbol(func->strlit);
  value_returned= false;
  s = statement_block(Thisfunction);
  gen_func_statement_block(s);

  // If the function's return type isn't void, we had better
  // have returned a value
  if (func->type != ty_void && value_returned==false)
    fatal("Control reaches end of non-void function %s()\n", func->strlit);
}

// Parse a function prototype and
// return an ASTnode with the details
//
//- function_prototype= typed_declaration LPAREN
//-                     ( typed_declaration_list (COMMA ELLIPSIS)?
//-                     | VOID
//-                     ) RPAREN (THROWS typed_declaration )?
//-
static ASTnode *function_prototype(ASTnode * func) {
  ASTnode *paramlist = NULL;
  ASTnode *astexcept;
  Type *basetype;
  bool is_void= false;

  // We already have the typed declaration in func.
  // Get the left parenthesis
  lparen();

  // If the next token is VOID,
  // see if it is followed by a ')'
  if (Thistoken.token == T_VOID) {
    scan(&Peektoken);
    // It is, so we have no parameters
    if (Peektoken.token == T_RPAREN) {
      Peektoken.token= 0;
      scan(&Thistoken);
      func->left= NULL;
      is_void= true;
    }
  }

  if (is_void == false) {
    // Get the list of parameters
    paramlist = typed_declaration_list();

    // If the next token is an ELLIPSIS,
    // mark the function as variadic
    if (Thistoken.token == T_ELLIPSIS) {
      scan(&Thistoken);
      func->is_variadic = true;
    }

    // Get the ')' and add the params to the function
    rparen();
    func->left = paramlist;
  }

  // If we have a THROWS
  if (Thistoken.token == T_THROWS) {
    scan(&Thistoken);

    // Get the name and base type of the exception variable
    astexcept = typed_declaration();
    basetype = value_at(astexcept->type);

    // The type must be a pointer to a struct which
    // has an int32 as the first member
    if ((astexcept->type->kind != TY_STRUCT) ||
	(astexcept->type->ptr_depth != 1) ||
	(basetype->memb == NULL) || (basetype->memb->type != ty_int32))
      fatal("Variable %s not suitable to hold an exception\n",
	    astexcept->strlit);

    // Build a Sym node with the variable's name
    // and type, and add it to the ASTnode
    add_sym_to(&(func->sym), astexcept->strlit, ST_VARIABLE, astexcept->type);
    func->sym->visibility = SV_LOCAL;
  }

  return (func);
}

// Get a linked list of typed declarations
// as a set of ASTnodes linked by the middle child
//
//- typed_declaration_list= typed_declaration (COMMA typed_declaration_list)*
//-
static ASTnode *typed_declaration_list(void) {
  ASTnode *first, *this, *next;

  // Get the first typed_declaration
  first = this = typed_declaration();

  while (1) {
    // If no comma, stop now
    if (Thistoken.token != T_COMMA)
      break;

    // Skip the comma
    scan(&Thistoken);

    // Stop if we hit an ELLIPSIS
    if (Thistoken.token == T_ELLIPSIS)
      break;

    // Get the next declaration and link it in
    next = typed_declaration();
    this->mid = next;
    this = next;
  }

  return (first);
}

// Get a typed declaration with an optional trailing array size
// and return it as an ASTnode with the type updated and the
// count set as the array's size.
//
// Or, if we have a type within '[' ']', then return an ASTnode
// with the value type, key type and symbol name
//
//- array_typed_declaration= typed_declaration (array_size | assoc_keytype)?
//- 
static ASTnode *array_typed_declaration(void) {
  ASTnode *this;
  int dimensions;

  // Get the typed declaration
  this = typed_declaration();

  // If next token is an '['
  if (Thistoken.token == T_LBRACKET) {

    // Skip the left bracket
    scan(&Thistoken);

    // If we have a type in the '[' ']'
    if (match_type(true) != NULL) {
      this->keytype= assoc_keytype();

      // Check it's a valid key type: bool, pointer or integer
      if ((this->keytype != ty_bool) &&
	  (is_pointer(this->keytype) == false) &&
	  (is_integer(this->keytype) == false))
	fatal("Associative array key type must be integer, bool or pointer\n");
      return (this);
    }

    // No, it must be an array dimension list
    // Get the array's dimensions and change the type.
    this->dimsize = array_size(&dimensions);
    this->dimensions = dimensions;
    this->is_array = true;
    this->type = pointer_to(this->type);
  }

  return (this);
}

// Get the dimensions of an array.
// Return a list of dimension sizes
// and the number of dimensions.
//
//- array_size= (LBRACKET integer_constant RBRACKET)+
//-
static int *array_size(int *num) {
  int max= 10;		// An arbitrary choice
  int i=0;
  int *list;
  Intsize count;

  // Make the list of dimension sizes
  list= (int *)Malloc(max *sizeof(int));

  while (i < max) {
    // We've already skipped the leading '['.
    // Get the number of elements
    count= integer_constant();

    // We need an count value which isn't negative
    if (count < 0)
      fatal("Array dimension must be a positive integer literal\n");

    // Get the dimension's size, skip the ']'
    list[i] = (int) count;
    match(T_RBRACKET, true);

    // Stop looping if the next token is not a '['
    if (Thistoken.token != T_LBRACKET) break;

    // It is, so skip it and loop back
    scan(&Thistoken);
    i++;
  }

  // Return the list and number of dimensions
  *num= i+1;
  return (list);
}

// Get the type for the key of an associative array
//
//- assoc_keytype= LBRACKET type RBRACKET
//-
static Type *assoc_keytype(void) {
  Type *ty;

  // Get the key type
  ty = match_type(false);

  // Skip the ']'
  match(T_RBRACKET, true);
  return(ty);
}

// Get a symbol declaration along with its type as an ASTnode.
//
//- typed_declaration= CONST? INOUT? type IDENT
//-
static ASTnode *typed_declaration(void) {
  ASTnode *identifier;
  Type *t;
  bool is_const= false;
  bool is_inout= false;

  // See if the declaration is marked const
  if (Thistoken.token == T_CONST) {
    scan(&Thistoken);
    is_const= true;
  }

  // See if the declaration is marked inout
  if (Thistoken.token == T_INOUT) {
    scan(&Thistoken);
    is_inout= true;
  }

  // Get the type and skip past it.
  t = match_type(false);

  // Get the identifier, set its type
  match(T_IDENT, true);
  identifier = mkastleaf(A_IDENT, NULL, false, NULL, 0);
  identifier->strlit = strdup(Text);
  identifier->type = t;
  identifier->is_const= is_const;
  identifier->is_inout= is_inout;

  return (identifier);
}
